--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">PokemonFinder</string>
+    <string name="msg_title_pokemon">Pokémon</string>
+    <string name="msg_name_pokemon">Name</string>
+    <string name="msg_home_letsgo">Let\'s go!</string>
+    <string name="msg_register_title">Let\'s meet each other firs?</string>
+    <string name="msg_register_name">First we need to know your name..</string>
+    <string name="msg_select_gretting">Hello, trainer Dev!</string>
+    <string name="msg_select_favorite">...now tell us wich is your favorite Pokémon type:</string>
 </resources>
