--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">PokemonFinder</string>
+    <string name="app_name">Pokémon Finder</string>
     <string name="msg_title_pokemon">Pokémon</string>
     <string name="msg_name_pokemon">Name</string>
     <string name="msg_home_letsgo">Let\'s go!</string>
@@ -8,4 +8,5 @@
     <string name="msg_select_gretting">Hello, trainer Dev!</string>
     <string name="msg_select_favorite">...now tell us wich is your favorite Pokémon type:</string>
     <string name="action_search">Search</string>
+    <string name="title_loading">Loading</string>
 </resources>
